# ai-agent-demo

./: README.md
ATS_RESUME_SCANNING/: README.md  agent.py  main.py  pyproject.toml  resume_evaluation.xlsx  schemas.py
Claude/: Dockerfile  Makefile  agent.py  boto.py  env-example  newui.py  pyproject.toml  req.sh  requirements.txt  ui.py
Claude/tmp/: agent.db  data.db
Claude/tmp/uploads/: newui.py
DNS-Agent-Agno/: .dockerignore  Makefile  README.md  dnst.py  main.py  pyproject.toml  requirements.txt  ui.py
DNS-Agent-Agno/tools/: DNSLookUp.py  Reputation.py
FINANCE-AGENT/: .gitignore  README.md  agents.py  phi_agents.py  requirements.txt  ui.py
Hacker-News-Agent/: README.md  main.py  pyproject.toml  ui.py
Medicin-Agent/: .gitignore  Dockerfile.backend  Dockerfile.ui  app.py  requirements.txt  settings.py  streamlit_ui.py
Medicin-Agent/agent/: agent.py  models.py
Nutrionisit-Agent-Agno/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  ui.py
PUBMED-CHATBOT/: .env-example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ui.py
PUBMED-CHATBOT/agents/: agents.py  models.py
PubMed-Agent-N8N/: .gitignore  PubMed_Assistant.json  README.md
PubMed-Agent-N8N/PubMedMCP/: pubmed-mcp.py  pyproject.toml
STARTUP-IDEA/: README.md  main.py  pyproject.toml  startup_idea_val_agent.py  ui-startup.py
YT-SUMMARIZER/: Dockerfile  README.md  agnets.py  requirements.txt  ui.py
YT_POST_GEN/: .gitignore  README.md  agnets.py  agno_agent.py  extracted_text.txt  main.py  pyproject.toml  requirements.txt  ui.py  video_summ.py
cli-app/: .gitignore  DOCUMENTATION.md  README.md  install.sh  main.py  pyproject.toml
cli-app/src/: __init__.py  agent_app.py  chat.py  cli.py  constant.py  dbtest.py  main.py  models.py  session.py  ui.py
cli-app/src/tools/: file.py
