[project]
name = "claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno[aws,groq]>=1.5.6",
    "anthropic[bedrock]>=0.52.2",
    "duckduckgo-search>=8.0.2",
    "psycopg>=3.2.9",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]
