[project]
name = "hacker-news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.1",
    "anthropic>=0.51.0",
    "boto3>=1.38.18",
    "duckduckgo-search>=8.0.2",
    "fastapi>=0.115.12",
    "groq>=0.25.0",
    "hackernews>=2.0.0",
    "lxml-html-clean>=0.4.2",
    "newspaper4k>=0.9.3.1",
    "ollama>=0.4.8",
    "streamlit>=1.45.1",
    "tavily-python>=0.7.2",
]
