[project]
name = "pubmed-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.23",
    "langchain-aws>=0.2.19",
    "langchain-community>=0.3.21",
    "langgraph>=0.3.29",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "xmltodict>=0.14.2",
]
